Fixes [SR-78] swift compiler seg fault

Fixes a segmentation fault where the IRGen module would crash when a
generic (empty) struct was part of the source code because it tried to
call std::next on an end iterator.